--- a/style/_header.scss
+++ b/style/_header.scss
@@ -7,9 +7,8 @@ $hover: red;
     max-width: 1109px;
     width: 100%;
     min-height: 23px;
-    
     margin: auto;
-    margin-top:3.75rem;
+    margin-top: 60px;
 
     &__logo {
         max-width: 90px;
