--- a/style/_colors.scss
+++ b/style/_colors.scss
@@ -1,4 +1,7 @@
 $p-color: #111111;
 $li-color: #111111;
+$h1-color: #111111;
 $txt-hero:#4A4FF2;
+$navbar-bg:#FFFFFF;
 $hover:#4A4FF2;
+$border-line:#979797;
