--- a/style/_hero.scss
+++ b/style/_hero.scss
@@ -22,8 +22,8 @@
             color: colors.$txt-hero;
         }
         &-content {
-            font-size: 2.5rem;
-            line-height: 3.75rem;
+            font-size: 40px;
+            line-height: 60px;
 
             span{
                 color: colors.$txt-hero;
