--- a/style/_colors.scss
+++ b/style/_colors.scss
@@ -2,6 +2,8 @@ $p-color: #111111;
 $li-color: #111111;
 $h1-color: #111111;
 $txt-hero:#4A4FF2;
+$button: #4A4FF2;
+$button-active:#474a9c;
 $navbar-bg:#FFFFFF;
 $hover:#4A4FF2;
 $border-line:#979797;
