--- a/style/_hero-project.scss
+++ b/style/_hero-project.scss
@@ -49,6 +49,7 @@
         font-size: 16px;
         line-height: 26px;
         color: colors.$p-color;
+        opacity: opacity.$opacity-08;
         margin-top: 20px;
     }
 
