--- a/style/project.scss
+++ b/style/project.scss
@@ -2,7 +2,7 @@
 @use '_colors';
 @import '_header';
 @import '_hero-project';
-@import '_content';
+@import '_content-project';
 @import '_footer';
 
 
