--- a/style/_header.scss
+++ b/style/_header.scss
@@ -1,5 +1,16 @@
 @use '_colors';
 
+
+header{
+    position:fixed;
+    width: 100%;
+    top:0;
+    z-index:100;
+    background-color: #ffffff;
+    height: 60px;
+    border-bottom: 1px solid rgb(202, 199, 199);
+}
+
 .nav__container {
     display: flex;
     justify-content: space-between;
@@ -7,7 +18,9 @@
     max-width: 1109px;
     width: 100%;
     min-height: 60px;
-    margin: auto;     
+    margin: auto;
+    background-color: #ffffff;   
+
 
 
     &__logo {
