--- a/style/_hero-project.scss
+++ b/style/_hero-project.scss
@@ -22,6 +22,18 @@
     margin-left: 6rem;
 }
 
+
+@mixin fade-in {
+    @keyframes fade-in {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+}
+
 .hero__container {
     max-width: 1110px;
     width: 100%;
@@ -29,6 +41,8 @@
     justify-content: flex-start;
     margin: auto;
     margin-top: 100px;
+    animation: fade-in 1s ease-in-out;
+    @include fade-in;
 
     &-text {
         max-width: 645px;
@@ -63,9 +77,9 @@
         align-items: baseline;
         border-bottom: 1px solid #979797;
 
-        &-category{
-            opacity: opacity.$opacity-05;
-        }
+            &-category{
+                opacity: opacity.$opacity-05;
+            }
        }
     }
 }
