changed alt text for images

--- a/style/index.scss
+++ b/style/index.scss
@@ -1,7 +1,7 @@
 @use '_font';
 @use '_colors';
 @import '_header';
-@import '_hero';
+@import '_hero-index';
 @import '_gallery';
 @import '_group';
 @import '_awards';
