--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -40,3 +40,21 @@ a:hover{
     transform: scale(1.1);
 }
 
+.footer__social {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: baseline;
+}
+
+.footer__social i {
+    font-size: 24px;
+    transition: color 0.3s ease-in-out, 
+    transform 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.footer__social i:hover {
+    color: colors.$hover;
+    transform: scale(1.2);
+}
